--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>dir2json</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <label for="input">Upload directory</label><input id="input" type="file" webkitdirectory directory />
+    <h1>dir2json</h1>
+    <p>A simple tool that converts your files to JSON</p>
+    <label for="input">Upload directory</label><br><input id="input" type="file" webkitdirectory directory />
     <br />
     <textarea id="txt" readonly></textarea>
     <script>
@@ -28,9 +28,6 @@
             txt.value += "]"
         })
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
