rows and columns

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>A simple tool that converts your files to JSON</p>
     <label for="input">Upload directory</label><br><input id="input" type="file" webkitdirectory directory />
     <br />
-    <textarea id="txt" readonly></textarea>
+    <textarea cols="20" rows="20" id="txt" readonly></textarea>
     <script>
         let txt = document.getElementById('txt');
         let input = document.getElementById('input');
