--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>dir2json</title>
     <style>
-        .button {
+        button {
             background-color: blue;
             border: none;
             color: white;
