--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>dir2json</title>
     <style>
-        button {
+        button, input[type="file"] {
             background-color: blue;
             border: none;
             color: white;
@@ -13,6 +13,7 @@
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
