--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             display: inline-block;
             font-size: 16px;
             cursor: pointer;
+            border-radius: 12px;
         }
 
         .hidden {
@@ -58,6 +59,7 @@
                 icon: 'success',
                 title: 'Files formatted successfully',
                 showCancelButton: true,
+                showConfirmButton: true,
                 confirmButtonText: 'Copy JSON to clipboard',
             }).then((result) => {
                 if (result.isConfirmed) {
