--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>dir2json</title>
     <style>
         button {
-            background-color: gainsboro;
+            background-color: khaki;
             border: none;
             color: white;
             padding: 15px 15px;
