--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <br />
         <fieldset>
             <legend>Additional config</legend>
-            <input type="text" name="prefix" id="prefixText"><label for="prefixText">Prefix</label>
+            <label for="prefixText">Prefix</label><input placeholder="www.mysite.net or /, or leave empty for no prefix" type="text" name="prefix" id="prefixText">
             <fieldset>
                 <legend>JSON type</legend>
-                <input type="radio" name="jsonType" id="jsonTypeArray"><label for="jsonTypeArray">Array</label>
+                <input type="radio" name="jsonType" id="jsonTypeArray"><label for="jsonTypeArray">Array</label><br>
                 <input type="radio" name="jsonType" id="jsonTypeObject"><label for="jsonTypeArray" disabled>Object
                     (coming soon)</label>
             </fieldset>
